# graphql_todos_backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/v1/core/: config.py
app/v1/db/: __init__.py  base.py  database.py
app/v1/models/: __init__.py  user.py  user_role_history.py
docx/: GraphQL_FastAPI_Complete_Tutorial.docx  GraphQL_FastAPI_Complete_Tutorial_converted.md  README_FIXES_dockermysqlerror.md  epic_graphql_todos.md  epic_graphql_todos_v2.md  user_management_uml.mermaid  user_management_uml_documentation.md
