[project]
name = "graphql-todos-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "pydantic[email,timezone]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "structlog>=25.5.0",
    "passlib[bcrypt]>=1.7.4",
    "aiomysql>=0.3.2",
    "uvicorn[standard]>=0.40.0",
    "alembic>=1.18.0",
    "strawberry-graphql[fastapi]>=0.288.4",
]
